[package]
name = "rust-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
async-retry = "0.4"
retry-policy = "0.3"
futures = "0.3"

[dev-dependencies]
httpmock = "0.7.0"      # 用于测试时的 HTTP mock
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
